candle-einops-macros/tests/ui/fail/missing-axis.stderr
error: Axes missing on the right: b
 --> tests/ui/fail/missing-axis.rs:4:21
  |
4 |     let _ = einops!("a b -> a", ());
  |                     ^^^^^^^^^^
